// https://docs.gradle.org/current/userguide/application_plugin.html
plugins {
    id 'application'
    //id "de.gesellix.debian" version "2021-04-05T21-19-00"
    // https://docs.gradle.org/current/userguide/building_java_projects.html
    id 'java-library'
}

application {
    mainClass = 'expectusafterlun.ch.jspeak.JSpeak'
    applicationDefaultJvmArgs = ['--enable-preview -Dawt.useSystemAAFontSettings=on -Dswing.aatext=true']
}

apply plugin: 'java'
apply plugin: 'jacoco'
apply plugin: 'application'
apply plugin: 'java-library'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
    }
}

version = '1.2.1'

mainClassName = 'expectusafterlun.ch.jspeak.JSpeak'

// Should give the start script a lowercase name
applicationName = 'jspeak'

repositories {
    mavenCentral()
}

dependencies {
    // https://mvnrepository.com/artifact/com.miglayout/miglayout-swing
    implementation group: 'com.miglayout', name: 'miglayout-swing', version: '5.0'
    testImplementation     'junit:junit:4.13'

    // https://www.oreilly.com/library/view/gradle-beyond-the/9781449373801/ch04.html
    // Example 4-12. Declaring dependencies on subprojects
//    compile project(':espeak')
//    compile project(':mbrola')
}

tasks.register('uberJar', Jar) {
    archiveClassifier = 'uber'

    from sourceSets.main.output

    dependsOn configurations.runtimeClasspath
    from {
        configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { zipTree(it) }
    }
}

// https://stackoverflow.com/questions/55433883/how-to-enable-java-12-preview-features-with-gradle
tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

test {
    jvmArgs(['--enable-preview'])
}

// https://stackoverflow.com/questions/61849514/how-to-set-the-use-enable-preview-compile-and-run-flags-from-gradle
tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview -Dawt.useSystemAAFontSettings=on -Dswing.aatext=true'
}

